main/default/objects/Simulation__c/Simulation__c.object-meta.xml
<CustomObject>
    <description>For storing simulated data.</description>
    <label>Simulation</label>
    <nameField>
        <label>Simulation  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Simulations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>