main/default/objects/Simulation__c/fields/From_Period__c.field-meta.xml
<CustomField>
    <fullName>From_Period__c</fullName>
    <label>From Period</label>
    <length>7</length>
    <type>Text</type>
</CustomField>