main/default/objects/Simulation__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Holt-Winters</fullName>
            </value>
            <value>
                <fullName>MOVING_AVERAGE</fullName>
                <label>Moving Average</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>