main/default/objects/Simulation__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Simulations</relationshipLabel>
    <relationshipName>Simulations</relationshipName>
    <type>Lookup</type>
</CustomField>