main/default/objects/Simulation__c/fields/To_Period__c.field-meta.xml
<CustomField>
    <fullName>To_Period__c</fullName>
    <label>To Period</label>
    <length>7</length>
    <type>Text</type>
</CustomField>